Add and configure acts_as_votable

--- a/app/views/pins/show.html.haml
+++ b/app/views/pins/show.html.haml
@@ -13,7 +13,11 @@
 							Submitted by
 							= @pin.user.email
 					.col-md-6
-						.pull-right
+						.btn-group.pull-right
 							- if user_signed_in?
+								= link_to like_pin_path(@pin), method: :put, class: "btn btn-default" do
+									%span.glyphicon.glyphicon-heart
+									= @pin.get_upvotes.size
+
 								= link_to "Edit", edit_pin_path, class: "btn btn-default"
 								= link_to "Delete", pin_path, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default"
